Wed Aug  8 17:08:14 2012  Koichi Sasada  <ko1@atdot.net>

	* bootstrap/test_exception.rb: fix a last committed test.

Wed Aug  8 16:27:58 2012  Koichi Sasada  <ko1@atdot.net>

	* compile.c, insns.def (checkmatch):
	  remove checkincludearray instruction and
	  add new instruction checkmatch.
	  This change is to solve
	  [Bug #4438] "rescue args type check omitted".

	* iseq.c: increment ISEQ_MAJOR_VERSION because removal of
	  checkincludearray instruction.

	* vm_core.h: add several definitions for
	  the checkmatch instruction.

	* vm_insnhelper.c (check_match): added.

	* bootstraptest/test_exception.rb: add a test.

	* test/ruby/test_exception.rb: ditto.

Wed Aug  8 05:51:20 2012  Eric Hodel  <drbrain@segment7.net>

	* proc.c (method_clone):  Added documentation.  Patch by Robin Dupret.
	  Fixes #152 on github.

Tue Aug  7 20:19:29 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/readline/readline.c (Init_readline): rl_catch_signals=0 returns
	  back. Without this, on FreeBSD9 and readline 6.2 irb can't catch ^C.
	  [Bug #5423]

Tue Aug 07 20:12:39 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_exec.c, insns.def (leave): solve problems on
	  OPT_CALL_THREADED_CODE.
	  Catch up finish frame structure on OPT_CALL_THREADED_CODE.

	* vm_core.h: add rb_thread_t#retval for temporary space on
	  OPT_CALL_THREADED_CODE.

	* vm.c (th_init): clear rb_thread_t#retval as Qundef.

	* vm_dump.c (rb_vmdebug_debug_print_pre): fix debug print format.

Tue Aug  7 11:58:27 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_require.rb (TestRequire#test_require_twice): added.

Tue Aug  7 11:35:37 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_method.c (rb_redefine_opt_method): use RCLASS_ORIGIN to avoid
	  SEGV when a module-prepended class is refined.

Tue Aug  7 10:46:37 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_file_exhaustive.rb
	  (TestFileExhaustive#test_expand_path*): refactoring.  split the method
	  into some chunks of the same kind of tests.
