@@ -1,3 +1,7 @@
+Wed Aug  8 17:11:20 2012  Koichi Sasada  <ko1@atdot.net>
+
+	* compile.c (ADD_INSNL): make ADD_INSNSL as alias of ADD_INSN1.
+
 Wed Aug  8 17:08:14 2012  Koichi Sasada  <ko1@atdot.net>
 
 	* bootstrap/test_exception.rb: fix a last committed test.
